# NeuroBridge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  RETROSPECTIVE.md  ROADMAP.md  SECURITY.md  TESTING.md  mkdocs.yml  prompt30.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  profile_improvement.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_api.py  benchmark_memory.py  benchmark_pipeline.py  benchmark_transform.py
demo/: README.md  app.py  requirements.txt
demo/showcase/: adapted_adhd.txt  adapted_anxiety.txt  adapted_autism.txt  adapted_dyscalculia.txt  adapted_dyslexia.txt  original_adhd.txt  original_anxiety.txt  original_autism.txt  original_dyscalculia.txt  original_dyslexia.txt
docs/: PRIVACY_POLICY.md  api-reference.md  getting-started.md  integrations.md  ml_detection_design.md  profiles.md
docs/community/: discord-server-setup.md  good-first-issues.md
docs/release/: day25-blog-post.md  day25-hn-launch.md  day25-launch-schedule.md  day25-objections-faq.md  day28-sdk-status.md  day29-content-calendar.md  day29-final-polish-report.md  day30-hn-launch-pack.md  day30-launch-execution.md  day30-linkedin-newsletter-pack.md  day30-monitoring-runbook.md  day30-outreach-emails.md  day30-reddit-pack.md  day30-reflection-public.md  day30-social-pack.md  day30-sponsors-profile.md  v0.1.0-checklist.md  v0.1.0-github-release-notes.md  v0.1.0-runbook.md  v0.1.0-social-posts.md  v0.2.0-community-feedback-thread.md  v0.2.0-design-draft.md  v0.2.0-scope-lock.md
examples/: basic_usage.py  huggingface_example.py  langchain_example.py
neurobridge/: __init__.py  cli.py  exceptions.py
neurobridge/core/: __init__.py  (+7 more)
notebooks/: NeuroBridge_Quickstart.ipynb
tests/: __init__.py  test_accessibility.py  test_bridge.py  test_bridge_extended.py  test_bridge_release_readiness.py  test_cli.py  test_exceptions.py  test_format_adapter.py  test_integration.py  test_memory.py  test_memory_extended.py  test_memory_redis_paths.py  test_ml_detector.py  test_ml_features.py  test_ml_tracker.py  test_ml_training.py  test_performance.py  test_profiles.py  test_quiz.py  test_streaming.py  test_structure.py  test_tone.py  test_transform.py  test_transform_extended.py  test_utils_and_integrations.py  test_validators.py
website/: next-sitemap.config.js  next.config.js  package.json  tailwind.config.ts  vercel.json
(+113 files in other folders)
